cabal-version: 2.0


name:           vega
version:        1.0.0-alpha
description:    Fast Bitcoin mining node, capable of massively parallel transaction processing.
category:       Bitcoin, Finance, Network
homepage:       http://github.com/stoichammer/vega#readme
bug-reports:    http://github.com/stoichammer/vega/issues
author:         stoichammer
maintainer:     stoichammer
license:        PublicDomain
license-file:   UNLICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/stoichammer/vega.git



executable vega
  main-is: Main.hs
  other-modules:
      Xoken.Node
      Xoken.NodeConfig
      Paths_vega
      Network.Xoken.Node.Data
      Network.Xoken.Node.Data.ThreadSafeHashTable
      Network.Xoken.Node.AriviService
      Network.Xoken.Node.P2P.ChainSync
      Network.Xoken.Node.P2P.Types
      Network.Xoken.Node.Env
      Network.Xoken.Node.GraphDB
      Network.Xoken.Node.P2P.BlockSync
      Network.Xoken.Node.P2P.Common
      Network.Xoken.Node.P2P.PeerManager
      Network.Xoken.Node.WorkerListener
      Network.Xoken.Node.HTTP.Types
      Network.Xoken.Node.HTTP.Server
      Network.Xoken.Node.Service.Chain
      Network.Xoken.Node.WorkerDispatcher
      Network.Xoken.Node.P2P.UnconfTxSync

  ghc-options:  -fprof-auto -fprof-cafs -rtsopts -O2 -threaded -with-rtsopts=-N

  hs-source-dirs:
      app, src

  build-depends:
      aeson
    , aeson-pretty
    , base >=4.9 && <5
    , bytestring
    , cereal
    , conduit
    , containers
    , data-default
    , errors
    , filepath
    , hashable
    , hashable-time
    , http-types
    , monad-logger
    , mtl
    , network
    , nqe
    , optparse-applicative
    , random
    , regex-tdfa
    , resourcet
    , scotty
    , string-conversions
    , text
    , time
    , transformers
    , unliftio
    , unordered-containers
    , vector
    , wai
    , warp
    , xoken-core
    , network-simple
    , monad-loops
    , binary
    , zlib
    , utf8-string
    , base64-bytestring
    , base16-bytestring
    , extra
    , serialise
    , lifted-async
    , stm
    , arivi-crypto
    , arivi-p2p
    , arivi-utils
    , arivi-network
    , string-conv
    , stm-containers
    , directory
    , transformers-base
    , exceptions
    , monad-control
    , cql-io
    , tinylog
    , async
    , streamly
    , lifted-base
    , hasbolt >=0.1.3.6
    , resource-pool
    , cql
    , hashtables
    , base16-bytestring
    , SafeSemaphore
    , yaml
    , secp256k1-haskell
    , concurrent-extra
    , tls
    , x509-store
    , network-simple-tls
    , vformat
    , daemons
    , snap
    , lens
    , rocksdb-haskell-jprupp
    , zeromq4-haskell 
    , list-t
    , store
    , siphash
    
  default-language: Haskell2010

-- test-suite vega-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   other-modules:
--         Xoken.StoreSpec
--         Network.Xoken.Node.DataSpec
--         Paths_vega
--         Network.Xoken.Node.AriviService
--         Network.Xoken.Node.Data
--         Network.Xoken.Node.Env
--         Network.Xoken.Node.GraphDB
--         Network.Xoken.Node.P2P.Common
--         Network.Xoken.Node.P2P.Types
--         Network.Xoken.Node.XokenService
--         Xoken.Node
--         Xoken.NodeConfig

--   hs-source-dirs:
--       test, src
--   build-depends:
--       aeson
--     , base >=4.9 && <5
--     , bytestring
--     , cereal
--     , conduit
--     , containers
--     , data-default
--     , hashable
--     , hspec
--     , http-types
--     , monad-logger
--     , mtl
--     , network
--     , nqe
--     , random
--     , resourcet
--     , scotty
--     , string-conversions
--     , text
--     , time
--     , transformers
--     , unliftio
--     , unordered-containers
--     , vector
--     , wai
--     , warp
--     , xoken-core
--     , arivi-crypto
--     , arivi-p2p
--     , arivi-utils
--     , arivi-network
--     , SafeSemaphore
--     , stm
--     , stm-containers
--     , resource-pool
--     , hasbolt >=0.1.3.6
--     , cql
--     , cql-io
--     , serialise
--     , exceptions
--     , monad-control
--     , tinylog
--     , hashtables
--     , streamly
--     , async
--     , lifted-async
--     , lifted-base
--     , base64-bytestring
--     , extra
--     , zlib
--     , monad-loops
--     , utf8-string
--     , yaml
--     , secp256k1-haskell


  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
